--- a/docker/Dockerfile-bel_api-image
+++ b/docker/Dockerfile-bel_api-image
@@ -14,7 +14,7 @@ COPY ./api /app
 
 USER api
 
-HEALTHCHECK CMD curl --fail http://localhost:8000/healthcheck || exit 1
+# HEALTHCHECK CMD curl --fail http://localhost:8000/healthcheck || exit 1
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
 CMD gunicorn --config /app/gunicorn.conf --log-config /app/gunicorn_log.conf -b 0.0.0.0:8000 app:api
