--- a/docker/Dockerfile-bel_api-dev
+++ b/docker/Dockerfile-bel_api-dev
@@ -14,8 +14,7 @@ USER api
 
 # Volume mount ./api directory to /app in docker-compose file for development
 
-HEALTHCHECK --interval=5m --timeout=5s \
-    CMD curl --fail http://localhost:8000/healthcheck || exit 1
+# HEALTHCHECK CMD curl --fail http://localhost:8000/healthcheck || exit 1
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
 CMD gunicorn --config /app/gunicorn.conf --log-config /app/gunicorn_log.conf -b 0.0.0.0:8000 app:api
