--- a/api/gunicorn.conf
+++ b/api/gunicorn.conf
@@ -4,12 +4,11 @@ import logging
 
 logger=logging.getLogger(__name__)
 
-if os.environ.get('SERVER_MODE') == 'DEV':
-    reload = True
-
 worker_class = "gevent"
 workers = multiprocessing.cpu_count() * 2 + 1
 
+if os.environ.get('SERVER_MODE') == 'DEV':
+    workers=4
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
 
