--- a/docker/Dockerfile-bel_api-image
+++ b/docker/Dockerfile-bel_api-image
@@ -3,12 +3,18 @@ MAINTAINER  William Hayes whayes@openbel.org
 
 EXPOSE 8000
 
+RUN pip3 install pipenv
+
 RUN groupadd -g 1000 api && useradd api -u 1000 -g 1000 && mkdir /app && chown -R api:api /app
 
 WORKDIR /app
 
-COPY ./requirements.txt /app/requirements.txt
-RUN pip install -r /app/requirements.txt
+# -- Adding Pipfiles
+COPY Pipfile Pipfile
+COPY Pipfile.lock Pipfile.lock
+
+# -- Install dependencies:
+RUN set -ex && pipenv install --deploy --system
 
 COPY ./api /app
 
@@ -17,4 +23,4 @@ USER api
 # HEALTHCHECK CMD curl --fail http://localhost:8000/healthcheck || exit 1
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
-CMD gunicorn --config /app/gunicorn.conf --log-config /app/gunicorn_log.conf -b 0.0.0.0:8000 app:api
+CMD gunicorn --config /app/gunicorn_conf.py --log-config /app/gunicorn_log.conf -b 0.0.0.0:8000 app:api
