--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.4.3
+current_version = 0.4.4
 commit = True
 tag = True
 
@@ -7,7 +7,7 @@ tag = True
 
 [bumpversion:file:./api/__version__.py]
 
-[bumpversion:file:./docs/belbio_api.yaml]
+[bumpversion:file:./api/swagger.yaml]
 
-[bumpversion:file:./sphinx/source/conf.py]
+[bumpversion:file:./docs/source/conf.py]
 
