--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -6,6 +6,7 @@ pep8ignore = *.py E501 W391 E128
 python_paths = "../api"
 
 # Can add multiple files - see https://taverntesting.github.io/documentation#multiple-global-configuration-files
-tavern-global-cfg=
-    api/common.yaml
+# tavern-global-cfg=
+#    common.yaml
 
+tavern_beta_new_traceback = True
