--- a/conf/dotenv.sample
+++ b/conf/dotenv.sample
@@ -1,6 +1,10 @@
-BS_SERVER_MODE=DEV
+SERVICES_HOST_NAME=dev.belbio.test
+SERVER_MODE=DEV
 BELBIO_CONF=/belbio
 # GITHUB_ACCESS_TOKEN=
 ARANGO_USER=root
 ARANGO_PASSWD=root
 JWT_SECRET=testing
+RABBITMQ_USER=admin
+RABBITMQ_PASSWD=admin
+
