--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ falcon-auth = "*"
 falcon-cors = "*"
 flower = "*"
 gevent = "*"
-greenlet = {version = "*", platform_python_implementation="=='CPython'"}
+greenlet = {version = "*",platform_python_implementation = "=='CPython'"}
 gunicorn = "*"
 itsdangerous = "*"
 json-logging-py = "*"
@@ -38,6 +38,7 @@ pyopenssl = "*"
 bel = "*"
 requests-cache = "*"
 tavern = "*"
+celery = "*"
 
 [dev-packages]
 ptvsd = "*"
