--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-elasticsearch = "*"
+elasticsearch = ">=6.0.0,<7.0.0"
 falcon = "*"
 falcon-auth = "*"
 falcon-cors = "*"
