--- a/docker/Dockerfile-bel_api-dev
+++ b/docker/Dockerfile-bel_api-dev
@@ -25,3 +25,4 @@ USER api
 
 # https://sebest.github.io/post/protips-using-gunicorn-inside-a-docker-image/
 CMD gunicorn --config /app/gunicorn_conf.py --log-config /app/gunicorn_log.conf -b 0.0.0.0:8000 app:api
+aker
